@@ -595,7 +595,15 @@ static struct  dmi_system_id omnibook_ids[] __initdata = {
                 },
                 .driver_data = (void*) TSM30X
         },
-
+	{
+                .callback = dmi_matched,
+                .ident = "Toshiba Satellite A75",
+                .matches = {
+                        DMI_MATCH(DMI_SYS_VENDOR, "TOSHIBA"),
+                        DMI_MATCH(DMI_PRODUCT_NAME, "Satellite A75"),
+                },
+                .driver_data = (void*) TSM30X
+        },
         {
                 .callback = dmi_matched,
                 .ident = "Toshiba Satellite A105",
